--- a/www elements/index.html
+++ b/www elements/index.html
@@ -47,10 +47,42 @@
         reprehenderit placeat nam</p>
     </div>
 
-
-
   </section>
-  <section></section>
+  <section class='portfolio'>
+    <p>projekty z których jestem dumny</p>
+    <div class='project'><img src="images/portfolio1.jpg" alt="interia">
+      <div class="description">
+        <p>nazwa projektu</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo modi consectetur adipisci, in ex, harum illo
+          numquam obcaecati rem architecto necessitatibus ipsum mollitia repellendus officiis, labore voluptas natus
+          sed. Nisi.</p>
+      </div>
+    </div>
+    <div class='project'><img src="images/portfolio2.jpg" alt="natemat">
+      <div class="description">
+        <p>nazwa projektu</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo modi consectetur adipisci, in ex, harum illo
+          numquam obcaecati rem architecto necessitatibus ipsum mollitia repellendus officiis, labore voluptas natus
+          sed. Nisi.</p>
+      </div>
+    </div>
+    <div class='project'><img src="images/portfolio3.jpg" alt="allegro">
+      <div class="description">
+        <p>nazwa projektu</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo modi consectetur adipisci, in ex, harum illo
+          numquam obcaecati rem architecto necessitatibus ipsum mollitia repellendus officiis, labore voluptas natus
+          sed. Nisi.</p>
+      </div>
+    </div>
+    <div class='project'><img src="images/portfolio4.jpg" alt="onet">
+      <div class="description">
+        <p>nazwa projektu</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo modi consectetur adipisci, in ex, harum illo
+          numquam obcaecati rem architecto necessitatibus ipsum mollitia repellendus officiis, labore voluptas natus
+          sed. Nisi.</p>
+      </div>
+    </div>
+  </section>
   <section></section>
   <section></section>
   <section></section>
