--- a/www elements/index.html
+++ b/www elements/index.html
@@ -49,7 +49,7 @@
 
   </section>
   <section class='portfolio'>
-    <p>projekty z których jestem dumny</p>
+    <p>projekty, z których jestem dumny</p>
     <div class='project'><img src="images/portfolio1.jpg" alt="interia">
       <div class="description">
         <p>nazwa projektu</p>
