--- a/www elements/index.html
+++ b/www elements/index.html
@@ -83,7 +83,13 @@
       </div>
     </div>
   </section>
-  <section></section>
+  <section class='motto'>
+    <p>moje życiowe motto</p>
+    <p>,,Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo voluptate deserunt sequi aliquam doloremque nobis!
+      Exercitationem labore dolores, corporis dolor sunt laboriosam perspiciatis possimus id, asperiores velit
+      blanditiis illum dolorem!"</p>
+    <p>Steve Jobs</p>
+  </section>
   <section></section>
   <section></section>
   <footer></footer>
