--- a/www elements/index.html
+++ b/www elements/index.html
@@ -84,11 +84,14 @@
     </div>
   </section>
   <section class='motto'>
-    <p>moje życiowe motto</p>
-    <p>,,Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo voluptate deserunt sequi aliquam doloremque nobis!
-      Exercitationem labore dolores, corporis dolor sunt laboriosam perspiciatis possimus id, asperiores velit
-      blanditiis illum dolorem!"</p>
-    <p>Steve Jobs</p>
+    <div class="mottoContent">
+      <p>moje życiowe motto</p>
+      <p>,,Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo voluptate deserunt sequi aliquam doloremque
+        nobis!
+        Exercitationem labore dolores, corporis dolor sunt laboriosam perspiciatis possimus id, asperiores velit
+        blanditiis illum dolorem!"</p>
+      <p>Steve Jobs</p>
+    </div>
   </section>
   <section></section>
   <section></section>
