--- a/www elements/index.html
+++ b/www elements/index.html
@@ -93,7 +93,32 @@
       <p>Steve Jobs</p>
     </div>
   </section>
-  <section></section>
+  <section class='hobby'>
+    <p>w wolnym czasie uwielbiam</p>
+    <div class="images">
+      <div class="overlay">
+        <p>chodzić po górach</p>
+      </div><img src="images/hobby1.jpg" alt="mountain hiking">
+    </div>
+    <div class="images">
+      <div class="overlay">
+        <p>jeździć offroad</p>
+      </div><img src="images/hobby2.jpg" alt="mountain driving">
+    </div>
+    <div class="images">
+      <div class="overlay">
+        <p>uczyć się programowania</p>
+      </div> <img src="images/hobby3.jpg" alt="programming">
+    </div>
+    <div class="images">
+      <div class="overlay">
+        <p>zdrowo się odżywiać</p>
+      </div><img src="images/hobby4.jpg" alt="healthy food">
+    </div>
+
+
+
+  </section>
   <section></section>
   <footer></footer>
 </body>
