--- a/www elements/index.html
+++ b/www elements/index.html
@@ -119,7 +119,24 @@
 
 
   </section>
-  <section></section>
+  <section class="contact">
+    <p>skontaktuj się ze mną</p>
+    <form>
+      <input type="text" placeholder='twoję imię'>
+      <input type="email" placeholder='e-mail'>
+      <input type="text" placeholder='treść wiadomości'>
+      <button>wyślij wiadomość</button>
+    </form>
+    <div class="socialmedia">
+      <ul>
+        <li><img src="images/contact1.png" alt="e-mail">adamnowak@gmail.com</li>
+        <li><img src="images/contact2.png" alt="e-mail">501 501 501</li>
+        <li><img src="images/contact3.png" alt="e-mail">adamnowak</li>
+        <li><img src="images/contact4.png" alt="e-mail">@adamnowak</li>
+        <li><img src="images/contact5.png" alt="e-mail">adamnowak</li>
+      </ul>
+    </div>
+  </section>
   <footer></footer>
 </body>
 
