--- a/www elements/index.html
+++ b/www elements/index.html
@@ -129,15 +129,25 @@
     </form>
     <div class="socialmedia">
       <ul>
-        <li><img src="images/contact1.png" alt="e-mail">adamnowak@gmail.com</li>
-        <li><img src="images/contact2.png" alt="e-mail">501 501 501</li>
-        <li><img src="images/contact3.png" alt="e-mail">adamnowak</li>
-        <li><img src="images/contact4.png" alt="e-mail">@adamnowak</li>
-        <li><img src="images/contact5.png" alt="e-mail">adamnowak</li>
+        <li><img src="images/contact1.png" alt="e-mail">
+          <p>adamnowak@gmail.com</p>
+        </li>
+        <li><img src="images/contact2.png" alt="phone">
+          <p>501 501 501</p>
+        </li>
+        <li><img src="images/contact3.png" alt="facebook">
+          <p>adamnowak</p>
+        </li>
+        <li><img src="images/contact4.png" alt="twitter">
+          <p>@adamnowak</p>
+        </li>
+        <li><img src="images/contact5.png" alt="linkedin">
+          <p>adamnowak</p>
+        </li>
       </ul>
     </div>
   </section>
-  <footer></footer>
+  <footer> &copy;2020 Jan Nowak</footer>
 </body>
 
 </html>
