--- a/www elements/index.html
+++ b/www elements/index.html
@@ -8,10 +8,24 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@400;700&family=Saira:wght@300;400&display=swap"
     rel="stylesheet">
+  <script src="https://kit.fontawesome.com/f4a814d48a.js" crossorigin="anonymous"></script>
+
   <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
+  <div class='burger'><i class="fas fa-bars show"></i><i class="fas fa-times"></i></div>
+  <nav>
+    <aside class='hiddenMenu'>
+      <a href="#">Strona główna</a>
+      <a href="#">Umiejętności</a>
+      <a href="#">Portfolio</a>
+      <a href="#">Motto</a>
+      <a href="#">Hobby</a>
+      <a href="#">Kontakt</a>
+    </aside>
+  </nav>
   <header>
     <div class='welcome'>
       <p>witaj!</p>
@@ -148,6 +162,7 @@
     </div>
   </section>
   <footer> &copy;2020 Jan Nowak</footer>
+  <script src="javascript/main.js"></script>
 </body>
 
 </html>
