--- a/www elements/index.html
+++ b/www elements/index.html
@@ -30,9 +30,9 @@
   </nav>
   <header>
     <div class='welcome'>
-      <p></p>
-      <h1></h1>
-      <h2></h2>
+      <p><span class="text"></span><span class="cursor">|</span></p>
+      <h1><span class="text"></span><span class="cursor">|</span></h1>
+      <h2><span class="text"></span><span class="cursor">|</span></h2>
       <button>zobacz moje portfolio</button>
     </div>
     <img src="images/photo1.png" alt="Jan Nowak">
